--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=helloworld
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=a, initial-scale=1.0">
+    <meta name="description" content="陶强大傻逼">
     <title>Document</title>
+
+    <style>
+        div{
+            width: 500px;
+            height: 500px;
+            background-color: lightpink;
+        }
+        h1{
+            color: blueviolet;
+            text-align: center;
+        }
+        a:hover{
+            color: red;
+            text-decoration: none;
+        }
+    </style>
+    <link rel="stylesheet" href="./wailian.css">
 </head>
 <body>
-    <video src="./img/野猪陶强.mp4" controls></video>
+    <div>
+        <h1>点击陶强有惊喜</h1>
+        <h2>陶强大傻逼</h2>
+        <h3><a href="./ceshi02.html">有奖问答</a></h3>
+        <a href="./index.html"><img src="./img/taoqiang.png" alt="" height="300" width="300"></a>
+    </div>
+   
 </body>
 </html>
